--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -1010,17 +1010,20 @@ await nango.triggerAction('<INTEGRATION-ID>', '<CONNECTION_ID>', '<ACTION-NAME>'
 
 # Proxy
 
-### Proxy - GET requests
-
-Makes an HTTP GET request using the [proxy](/understand/concepts/proxy).
+Makes an HTTP request using the [proxy](/understand/concepts/proxy):
 
 ```js
-const res = await nango.get({
-    endpoint: '/endpoint',
+const config = { 
+    endpoint: '/some-endpoint',
     providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
+    connectionId: '<CONNECTION-ID>'
+};
+
+await nango.get(config); // GET request
+await nango.post(config); // POST request
+await nango.put(config); // PUT request
+await nango.patch(config); // PATCH request
+await nango.delete(config); // DELETE request
 ```
 
 **Parameters**
@@ -1074,262 +1077,6 @@ The response from the external API is passed back to you exactly as Nango gets i
 - response body
 </Expandable>
 
-
-### Proxy - POST requests
-
-Makes an HTTP POST request using the [proxy](/understand/concepts/proxy).
-
-```js
-const res = await nango.post({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
-
-### Proxy - PUT requests
-
-Makes an HTTP PUT request using the [proxy](/understand/concepts/proxy).
-
-```js
-const res = await nango.put({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
-
-### Proxy - PATCH requests
-
-Makes an HTTP PATCH request using the [proxy](/understand/concepts/proxy).
-
-```js
-const res = await nango.patch({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
-
-### Proxy - DELETE requests
-
-Makes an HTTP DELETE request using the [proxy](/understand/concepts/proxy).
-
-```js
-const res = await nango.delete({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
