--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -325,11 +325,11 @@ await nango.listConnections();
 Returns a specific connection with credentials.
 
 ```js
-await nango.getConnection();
+await nango.getConnection(<INTEGRATION-ID>, <CONNECTION-ID>);
 ```
 
 <Info>
-The response content depends on the API authentication type (OAuth 2, OAuth 1, API key, Basic auth). 
+The response content depends on the API authentication type (OAuth 2, OAuth 1, API key, Basic auth, etc.). 
 
 If you do not want to deal with collecting & injecting credentials in requests for multiple authentication types, use the Proxy ([step-by-step guide](/integrate/guides/proxy-requests-to-an-api)).
 </Info>
@@ -346,16 +346,13 @@ We recommend not caching tokens for longer than 5 minutes to ensure they are fre
     <ResponseField name="providerConfigKey" type="string" required>
         The integration ID.
     </ResponseField>
-
     <ResponseField name="connectionId" type="string" required>
         The connection ID.
     </ResponseField>
-
-    <ResponseField name="forceRefresh" type="string">
+    <ResponseField name="forceRefresh" type="boolean">
         Defaults to `false`. If `false`, the token will only be refreshed if it expires within 15 minutes. If `true`, a token refresh attempt will happen on each request. This is only useful for testing and should not be done at high traffic.
     </ResponseField>
-
-    <ResponseField name="refreshToken" type="string">
+    <ResponseField name="refreshToken" type="boolean">
         Defaults to `false`. If `false`, the refresh token is not included in the response, otherwise it is. In production, it is not advised to return the refresh token, for security reasons, since only the access token is needed to sign requests.
     </ResponseField>
 </Expandable>
@@ -1013,17 +1010,20 @@ await nango.triggerAction('<INTEGRATION-ID>', '<CONNECTION_ID>', '<ACTION-NAME>'
 
 # Proxy
 
-### Proxy - GET requests
-
-Triggers an action for a connection.
+Makes an HTTP request using the [proxy](/understand/concepts/proxy):
 
 ```js
-const res = await nango.get({
-    endpoint: '/endpoint',
+const config = { 
+    endpoint: '/some-endpoint',
     providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
+    connectionId: '<CONNECTION-ID>'
+};
+
+await nango.get(config); // GET request
+await nango.post(config); // POST request
+await nango.put(config); // PUT request
+await nango.patch(config); // PATCH request
+await nango.delete(config); // DELETE request
 ```
 
 **Parameters**
@@ -1077,262 +1077,6 @@ The response from the external API is passed back to you exactly as Nango gets i
 - response body
 </Expandable>
 
-
-### Proxy - POST requests
-
-Triggers an action for a connection.
-
-```js
-const res = await nango.post({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
-
-### Proxy - PUT requests
-
-Triggers an action for a connection.
-
-```js
-const res = await nango.put({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
-
-### Proxy - PATCH requests
-
-Triggers an action for a connection.
-
-```js
-const res = await nango.patch({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
-
-### Proxy - DELETE requests
-
-Triggers an action for a connection.
-
-```js
-const res = await nango.delete({
-    endpoint: '/endpoint',
-    providerConfigKey: '<INTEGRATION-ID>',
-    connectionId: '<CONNECTION-ID>',
-    baseUrlOverride: 'https://base-url.com'
-});
-```
-
-**Parameters**
-
-<Expandable>
-    <ResponseField name="config" type="object" required>
-        <Expandable title="config" defaultOpen>
-            <ResponseField name="endpoint" type="string" required>
-                The endpoint of the request.
-            </ResponseField>
-            <ResponseField name="providerConfigKey" type="string" required>
-                The integration ID (for credential injection).
-            </ResponseField>
-            <ResponseField name="connectionId" type="string" required>
-                The connection ID (for credential injection). 
-            </ResponseField>
-            <ResponseField name="headers" type="Record<string, string>">
-                The headers of the request.
-            </ResponseField>
-            <ResponseField name="params" type="Record<string, string | number>">
-                The query parameters of the request.
-            </ResponseField>
-            <ResponseField name="data" type="unkown">
-                The body of the request.
-            </ResponseField>
-            <ResponseField name="retries" type="number">
-                The number of retries in case of failure (with exponential back-off). Optional, default 0.
-            </ResponseField>
-            <ResponseField name="retryOn" type="number[]">
-                Array of additional status codes to retry a request in addition to the 5xx, 429, ECONNRESET, ETIMEDOUT, and ECONNABORTED
-            </ResponseField>
-            <ResponseField name="baseUrlOverride" type="string">
-                The API base URL. Can be ommitted if the base URL is configured for this API in the [providers.yaml](https://nango.dev/providers.yaml).
-            </ResponseField>
-            <ResponseField name="decompress" type="boolean">
-                Override the decompress option when making requests. Optional, defaults to false
-            </ResponseField>
-            <ResponseField name="responseType" type="'arraybuffer' | 'blob' | 'document' | 'json' | 'text' | 'stream'">
-                The type of the response. 
-            </ResponseField>
-        </Expandable>
-    </ResponseField>
-</Expandable>
-
-**Response**
-
-<Expandable>
-The response from the external API is passed back to you exactly as Nango gets it:
-- response code
-- response headers
-- response body
-</Expandable>
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
