--- a/docs-v2/integrate/guides/sync-data-from-an-api.mdx
+++ b/docs-v2/integrate/guides/sync-data-from-an-api.mdx
@@ -28,7 +28,7 @@ Nango sends [webhook](/understand/concepts/webhooks) notifications to your backe
 
 To set this up, go to the _Environment Settings_ tab and configure a _Webhook URL_ to which Nango will send notifications. 
 
-The webhook from Nango is a POST request with the following body ([reference](/reference/webhooks)):
+The webhook from Nango is a POST request with the following body:
 ```json
 {
     "connectionId": "<string>",
