--- a/docs-v2/understand/concepts/webhooks.mdx
+++ b/docs-v2/understand/concepts/webhooks.mdx
@@ -1,9 +1,29 @@
 ---
 title: 'Webhooks'
 sidebarTitle: 'Webhooks'
-description: 'Learn more about webhooks.'
+description: 'Learn more about how Nango lets you process webhooks.'
 ---
 
-<Info>
-The docs recently underwent a makeover, leaving this page empty. We are working hard to fill in all the missing pages within the next two weeks. Meanwhile, ask any questions on the [community](https://nango.dev/slack).
-</Info>
+There are two types of webhooks in Nango: webhooks from Nango (to your app) and webhooks from external APIs (to Nango).
+
+# Webhooks from Nango
+
+Nango sends webhook notifications to your backend in different cases:
+- **Sync webhook**: new data from syncs is available ([step-by-step guide](/integrate/guides/authorize-an-api#listen-for-webhooks))
+- **Authorization webhook**: an authorization flow completes ([step-by-step guide](/integrate/guides/sync-data-from-an-api#listen-for-webhooks-from-nango))
+- **Webhook forward**: an external API webhook is forwarded to your app ([step-by-step guide](/integrate/guides/receive-webhooks-from-an-api#configure-webhooks-from-nango))
+
+<Tip>
+Nango retries (with exponential backoff) webhooks with non-2xx responses.
+</Tip>
+
+Webhooks from Nango are POST requests with the following JSON body.
+
+# Webhooks from external APIs
+
+Nango makes it easy to process webhooks from external APIs ([step-by-step guide](/integrate/guides/receive-webhooks-from-an-api)).
+
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
