--- a/docs-v2/integrate/guides/authorize-an-api.mdx
+++ b/docs-v2/integrate/guides/authorize-an-api.mdx
@@ -161,7 +161,7 @@ Nango webhooks are post requests with the following JSON body:
 {
     "type": "auth", 
     "connectionId": "<CONNECTION-ID>",
-    "authMode": "OAUTH2|API_KEY|BASIC|OAUTH1|APP",
+    "authMode": "OAUTH1|OAUTH2|BASIC|API_KEY|APP_STORE|CUSTOM|APP|NONE",
     "providerConfigKey": "<INTEGRATION-ID>",
     "provider": "<API-CONFIGURATION-ID>",
     "environment": "dev" | "prod",
