--- a/docs-v2/integrate/guides/receive-webhooks-from-an-api.mdx
+++ b/docs-v2/integrate/guides/receive-webhooks-from-an-api.mdx
@@ -34,7 +34,10 @@ Nango webhook forwards are POST requests with the following JSON body:
 {
    "from": "hubspot",
    "type": "forward",
+   "connectionId": "<CONNECTION-ID>",
+   "providerConfigKey": "<INTEGRATION-ID>",
    "payload": ... // Raw payload from Hubspot wehook
+}
 ```
 
 # Handle external webhooks in syncs
