Fix broken docs links

--- a/docs-v2/integrate/guides/sync-data-from-an-api.mdx
+++ b/docs-v2/integrate/guides/sync-data-from-an-api.mdx
@@ -46,7 +46,7 @@ Webhooks with non-2xx responses are retried with exponential backoff.
 </Tip>
 
 <Warning>
-Before using webhooks in production, verify their origin ([step-by-step guide](/integrate/guides/receive-webhooks-from-nango#verify-webhooks-from-nango)).
+Before using webhooks in production, verify their origin ([step-by-step guide](/integrate/guides/advanced/verify-webhooks-from-nango)).
 </Warning>
 
 # Fetch the latest data
