[nan-638] pr feedback

--- a/docs-v2/reference/sdks/frontend.mdx
+++ b/docs-v2/reference/sdks/frontend.mdx
@@ -141,11 +141,11 @@ const result = nango.auth('<INTEGRATION-ID>', '<CONNECTION-ID>', {
           </ResponseField>
 
           <ResponseField name="oauth_client_id_override" type="string">
-            For OAuth2 override the integration's client id value
+            For OAuth 2, override the integration's client ID with a connection-level client ID. This is useful when your users bring their own OAuth 2 app (e.g. Netsuite).
           </ResponseField>
 
           <ResponseField name="oauth_client_secret_override" type="string">
-            For OAuth2 override the integration's client secret value
+            For OAuth 2, override the integration's client secret with a connection-level client secret. This is useful when your users bring their own OAuth 2 app (e.g. Netsuite).
           </ResponseField>
         </Expandable>
       </ResponseField>
