--- a/docs-v2/host/self-host/self-hosting-instructions.mdx
+++ b/docs-v2/host/self-host/self-hosting-instructions.mdx
@@ -20,7 +20,7 @@ SERVER_PORT=<PORT>
 
 The resulting callback URL for OAuth will be `<INSTANCE-URL>/oauth/callback`.
 
-<Note>You can customize the callback URL by updating "Callback URL" field in the "Project Settings" tab in the Nango admin.</Note>
+<Note>You can customize the callback URL by updating "Callback URL" field in the "Environment Settings" tab in the Nango admin.</Note>
 
 <Note>
     If you are using a custom domain, you should change the `NANGO_SERVER_URL` server environment variable accordingly (in the `.env` file or directly on
@@ -87,7 +87,7 @@ encryption key once you have set it.
 
 ### Custom websockets path[](#custom-websockets-path 'Direct link to Custom websockets path')
 
-The Nango server serves websockets from the `/` path by default for use by `@nangohq/frontend` during the login flow. 
+The Nango server serves websockets from the `/` path by default for use by `@nangohq/frontend` during the login flow.
 If you want more isolation between websockets and the dashboard (also served from `/`), then you can set the `NANGO_SERVER_WEBSOCKETS_PATH` environment variable to serve websockets from a different path:
 
 ```
