--- a/docs-v2/reference/api/authentication.mdx
+++ b/docs-v2/reference/api/authentication.mdx
@@ -2,7 +2,7 @@
 title: 'Authentication'
 ---
 
-Use the Nango Secret Key available in your [Project Settings](https://app.nango.dev/project-settings) as Bearer token in the `Authorization` header:
+Use the Nango Secret Key available in your [Environment Settings](https://app.nango.dev/environment-settings) as Bearer token in the `Authorization` header:
 
 ```
 Authorization: Bearer {nango-secret-key}
