--- a/docs-v2/integrations/all/personio.mdx
+++ b/docs-v2/integrations/all/personio.mdx
@@ -28,7 +28,7 @@ API configurations: [`personio`](https://nango.dev/providers.yaml), [`personio-r
 ## API gotchas
 
 -   Personio offers a separate recruiting API that is API key based and is listed under `personio-recruiting`
--   The other API Personio offers is a client credentials token that authorizes as app instead of a user. This is listed under `persion`.
+-   The other API Personio offers is a client credentials token that authorizes as app instead of a user. This is listed under `personio`.
 -   The values for the Partner-ID Personio-App can be defined by you, but should represent your company name and application name. For example `MY_APPLICATION`, `ACME` are valid values.
 
 
