--- a/docs-v2/integrations/all/personio.mdx
+++ b/docs-v2/integrations/all/personio.mdx
@@ -30,7 +30,7 @@ API configurations: [`personio`](https://nango.dev/providers.yaml), [`personio-r
 -   Personio offers a separate recruiting API that is API key based and is listed under `personio-recruiting`
 -   The other API Personio offers is a client credentials token that authorizes as app instead of a user. This is listed under `personio`.
 -   The `companyId` value is required for `personio-recruiting` and can be retrieved Settings > Integrations (API Credentials) and clicking on the "Recruiting API Key".
-    The value for `comapny` as required for `personio-recruiting` can is the name you use to login to your account
+    The value for `company` as required for `personio-recruiting` is the name you use to login to your account
     and is the subdomain of your Personio instance.
 -   The values for `partnerId` and `appId` are optional but strongly recommended by Personio. Both can be defined by you, but should represent your company name and application name and MUST follow the UPPER_SNAKE_CASE format. For example `MY_APPLICATION`, `ACME` are valid values.
     An example of setting them in the `nango.auth` call:
