--- a/docs-v2/integrations/all/personio.mdx
+++ b/docs-v2/integrations/all/personio.mdx
@@ -29,7 +29,7 @@ API configurations: [`personio`](https://nango.dev/providers.yaml), [`personio-r
 
 -   Personio offers a separate recruiting API that is API key based and is listed under `personio-recruiting`
 -   The other API Personio offers is a client credentials token that authorizes as app instead of a user. This is listed under `personio`.
--   The `companyId` value is required for `personio-recruiting` and can be retrieved Settings > Integrations (API Credentials) and clicking on the "Recruiting API Key".
+-   The `companyId` value is required for `personio-recruiting` and can be retrieved at Settings > Integrations (API Credentials) and clicking on the "Recruiting API Key".
     The value for `comapny` as required for `personio-recruiting` can is the name you use to login to your account
     and is the subdomain of your Personio instance.
 -   The values for `partnerId` and `appId` are optional but strongly recommended by Personio. Both can be defined by you, but should represent your company name and application name and MUST follow the UPPER_SNAKE_CASE format. For example `MY_APPLICATION`, `ACME` are valid values.
@@ -37,7 +37,7 @@ API configurations: [`personio`](https://nango.dev/providers.yaml), [`personio-r
     ```ts
     nango.auth('personio-recruiting', 'test-connection-id', { params: { companyId: '33434', partnerId: 'YOUR_CUSTOM_NAME', appId: 'UNIQUE_ID', company: 'company-b' },
         credentials: {
-          apiKey: '<secure-key'
+          apiKey: '<secure-key>'
         }
       })
       .then((result: { providerConfigKey: string; connectionId: string }) => {
