[nan-671] documentation for personio (#1937)
## Describe your changes
Add docs with snippet and remove extra param not needed for the provider

## Issue ticket number and link
NAN-671

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/docs-v2/integrations/all/personio.mdx
+++ b/docs-v2/integrations/all/personio.mdx
@@ -29,7 +29,35 @@ API configurations: [`personio`](https://nango.dev/providers.yaml), [`personio-r
 
 -   Personio offers a separate recruiting API that is API key based and is listed under `personio-recruiting`
 -   The other API Personio offers is a client credentials token that authorizes as app instead of a user. This is listed under `personio`.
--   The values for the Partner-ID Personio-App can be defined by you, but should represent your company name and application name. For example `MY_APPLICATION`, `ACME` are valid values.
+-   The `companyId` value is required for `personio-recruiting` and can be retrieved at Settings > Integrations (API Credentials) and clicking on the "Recruiting API Key".
+    The value for `company` as required for `personio-recruiting` is the name you use to login to your account
+    and is the subdomain of your Personio instance.
+-   The values for `partnerId` and `appId` are optional but strongly recommended by Personio. Both can be defined by you, but should represent your company name and application name and MUST follow the UPPER_SNAKE_CASE format. For example `MY_APPLICATION`, `ACME` are valid values.
+    An example of setting them in the `nango.auth` call:
+    ```ts
+    nango.auth('personio-recruiting', 'test-connection-id', { params: { companyId: '33434', partnerId: 'YOUR_CUSTOM_NAME', appId: 'UNIQUE_ID', company: 'company-b' },
+        credentials: {
+          apiKey: '<secure-key>'
+        }
+      })
+      .then((result: { providerConfigKey: string; connectionId: string }) => {
+        // do something
+      }).catch((err: { message: string; type: string }) => {
+        // handle error
+      });
+
+    nango.auth('personio', 'test-connection-id', { params: { partnerId: 'YOUR_CUSTOM_NAME', appId: 'UNIQUE_NAME' },
+        credentials: {
+            client_id: '<your-client-id>',
+            client_secret: '<your-client-secret>'
+        }
+      })
+      .then((result: { providerConfigKey: string; connectionId: string }) => {
+        // do something
+      }).catch((err: { message: string; type: string }) => {
+        // handle error
+      });
+    ```
 
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/personio.mdx)</Note>
