--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -20,5 +20,6 @@ sidebarTitle: Developer Tools
     <Card title="PagerDuty" href="/integrations/all/pagerduty" color="#68a063" />
     <Card title="Pendo" href="/integrations/all/pendo" color="#68a063" />
     <Card title="Shortcut" href="/integrations/all/shortcut" color="#68a063" />
+    <Card title="Snowflake" href="/integrations/all/snowflake" color="#68a063" />
     <Card title="Wakatime" href="/integrations/all/wakatime" color="#68a063" />
 </CardGroup>
