--- a/docs-v2/integrations/all/peopledatalabs.mdx
+++ b/docs-v2/integrations/all/peopledatalabs.mdx
@@ -27,6 +27,6 @@ API configuration: [`peopledatalabs`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-- People Data Labs uses API_KEY auth mode with query param: Param `api_token` in the request url to access different endpoints.
+- People Data Labs uses API_KEY auth mode with query parameter `api_key` in the request url.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/peopledatalabs.mdx)</Note>
