--- a/docs-v2/integrations/analytics.mdx
+++ b/docs-v2/integrations/analytics.mdx
@@ -12,5 +12,6 @@ sidebarTitle: Analytics
     <Card title="Amplitude" href="/integrations/all/amplitude" color="#68a063" />
     <Card title="Mixpanel" href="/integrations/all/mixpanel" color="#68a063" />
     <Card title="Segment" href="/integrations/all/segment" color="#68a063" />
+    <Card title="People Data Labs" href="/integrations/all/peopledatalabs" color="#68a063" />
     <Card title="Wakatime" href="/integrations/all/wakatime" color="#68a063" />
 </CardGroup>
