--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -16,7 +16,8 @@ sidebarTitle: Productivity
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
     <Card title="Figjam" href="/integrations/all/figjam" color="#68a063" />
     <Card title="Figma" href="/integrations/all/figma" color="#68a063" />
-    <Card title="Google Cal" href="/integrations/all/google-calendar" color="#68a063" />
+    <Card title="Google Calender" href="/integrations/all/google-calendar" color="#68a063" />
+    <Card title="Google Docs" href="/integrations/all/google-docs" color="#68a063" />
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
     <Card title="GSheet" href="/integrations/all/google-sheet" color="#68a063" />
     <Card title="Jira" href="/integrations/all/jira" color="#68a063" />
